ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: adressboken
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: webapp.mydomain.tld
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-service
              port:
                number: 80
  # - host: mongo-express.mydomain.tld
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: mongo-express-service
  #           port:
  #             number: 8081
